--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.5.2",
     "react-calendar": "^2.17.5",
     "react-dom": "^16.5.2",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
